# myandroid

MyCppApp/: CMakeLists.txt  main.cpp
MyCppApp/android/: AndroidManifest.xml
